# src/lib/api/types.ts
@@ -6,3 +6,8 @@ export type UserOut = components['schemas']['UserOut'];
 export type HealthOut = components['schemas']['HealthOut'];
 export type LoginIn = components['schemas']['LoginIn'];
 export type TokenOut = components['schemas']['TokenOut'];
+export type FieldOut = components['schemas']['FieldOut'];
+export type LabelOut = components['schemas']['LabelOut'];
+export type PagedFieldOut = components['schemas']['PagedFieldOut'];
+export type PagedLabelOut = components['schemas']['PagedLabelOut'];
+export type ImageOut = components['schemas']['ImageOut'];
